单链表代码

--- a/04ds/02linked_list.ipynb
+++ b/04ds/02linked_list.ipynb
@@ -25,47 +25,221 @@
    "source": [
     "class Node():\n",
     "    \"\"\"链表结构的Node节点\"\"\"\n",
-    "    def __init__(self, data,next_node=None):\n",
-    "        self.__data=data\n",
-    "        self.__next=next_node\n",
-    "    \n",
+    "\n",
+    "    def __init__(self, data, next_node=None):\n",
+    "        self.__data = data\n",
+    "        self.__next = next_node\n",
+    "\n",
     "    @property\n",
     "    def data(self):\n",
     "        return self.__data\n",
-    "    \n",
+    "\n",
     "    @data.setter\n",
-    "    def data(self,data):\n",
-    "        self.__data=data\n",
-    "    \n",
+    "    def data(self, data):\n",
+    "        self.__data = data\n",
+    "\n",
     "    @property\n",
     "    def next_node(self):\n",
     "        return self.__next\n",
-    "    \n",
+    "\n",
     "    @next_node.setter\n",
-    "    def next_node(self,node):\n",
-    "        self.__next=node\n",
-    "    \n",
+    "    def next_node(self, node):\n",
+    "        self.__next = node\n",
+    "\n",
+    "\n",
     "class SingelyLinkedList():\n",
     "    \"\"\"单向链表\"\"\"\n",
     "\n",
     "    def __init__(self):\n",
     "        \"\"\"单向列表的初始化方法.\"\"\"\n",
-    "        self.__head=None\n",
-    "    \n",
-    "    def find_by_value(self,value):\n",
+    "        self.__head = None\n",
+    "\n",
+    "    def find_by_value(self, value):\n",
     "        \"\"\"按照数据值在单向列表中查找.\n",
     "        参数:\n",
     "            value:查找的数据\n",
     "        返回:\n",
     "            Node\n",
     "        \"\"\"\n",
-    "        current=self.__head\n",
+    "        current = self.__head\n",
     "        while not current:\n",
-    "            if current.data==value:\n",
+    "            if current.data == value:\n",
     "                return current\n",
     "            else:\n",
-    "                current=current.next_node\n",
+    "                current = current.next_node\n",
     "        return None\n",
+    "\n",
+    "    def find_by_index(self, index):\n",
+    "        \"\"\"按照索引值在列表中查找.\n",
+    "        参数:\n",
+    "            index:索引值\n",
+    "        返回:\n",
+    "            Node\n",
+    "        \"\"\"\n",
+    "        count = 0\n",
+    "        current = self.__head\n",
+    "        while current:\n",
+    "            if count == index:\n",
+    "                return current\n",
+    "            else:\n",
+    "                count += 1\n",
+    "                current = current.next_node\n",
+    "        return None\n",
+    "\n",
+    "    def insert_to_head(self, value):\n",
+    "        \"\"\"在链表的头部插入一个存储value数值的Node节点.\n",
+    "        参数:\n",
+    "            value:将要存储的数据\n",
+    "        \"\"\"\n",
+    "        head = Node(value, self.__head)\n",
+    "        self.__head = head\n",
+    "\n",
+    "    def insert_after(self, node, value):\n",
+    "        \"\"\"在链表的某个指定Node节点之后插入一个存储value数据的Node节点.\n",
+    "        参数:\n",
+    "            node:指定的一个Node节点\n",
+    "            value:将要存储在新Node节点中的数据\n",
+    "        \"\"\"\n",
+    "        if node is None:\n",
+    "            return\n",
+    "\n",
+    "        new_node = Node(value, node.next_node)\n",
+    "        node.next_node = new_node\n",
+    "\n",
+    "    def insert_before(self, node, value):\n",
+    "        \"\"\"在链表的某个指定Node节点之前插入一个存储value数据的Node节点.\n",
+    "        参数:\n",
+    "            node:指定的一个Node节点\n",
+    "            value:将要存储在新的Node节点中的数据\n",
+    "        \"\"\"\n",
+    "        # 如果指定在一个空节点之前或者空链表之前插入数据节点，则什么都不做\n",
+    "        if (node is None) or (self.__head is None):\n",
+    "            return\n",
+    "\n",
+    "        # 如果是在链表头之前插入数据节点，则直接插入\n",
+    "        if node == self.__head:\n",
+    "            self.insert_to_head(value)\n",
+    "            return\n",
+    "\n",
+    "        count = 0\n",
+    "        current = self.__head\n",
+    "        while current != node:\n",
+    "            current = current.next_node\n",
+    "            count += 1\n",
+    "\n",
+    "        prev = self.__head\n",
+    "        for _ in range(count-1):\n",
+    "            prev = prev.next_node\n",
+    "        self.insert_after(prev, value)\n",
+    "\n",
+    "    def delete_by_node(self, node):\n",
+    "        \"\"\"在链表中删除指定Node的节点.\n",
+    "        参数:\n",
+    "            node:指定的Node节点\n",
+    "        \"\"\"\n",
+    "        # 如果链表是空的，则什么都不做\n",
+    "        if (node is None) or (self.__head is None):\n",
+    "            return\n",
+    "\n",
+    "        # 如果删除的是头节点\n",
+    "        if node == self.__head:\n",
+    "            self.__head = node.next_node\n",
+    "            return\n",
+    "\n",
+    "        pro = self.__head\n",
+    "        # 如果在整个链表中都没有找到指定删除的Node节点，则该标记量设置为True\n",
+    "        not_found = False\n",
+    "        while pro.next_node != node:\n",
+    "            # 如果已经到链表的最后一个节点，则表明该链表中没有找到指定删除的Node节点\n",
+    "            if pro.next_node is None:\n",
+    "                not_found = True\n",
+    "                break\n",
+    "            else:\n",
+    "                pro = pro.next_node\n",
+    "        if not not_found:\n",
+    "            pro.next_node = node.next_node\n",
+    "\n",
+    "    def delete_by_value(self, value):\n",
+    "        \"\"\"在链表中删除指定存储数据的Node节点.\n",
+    "        参数:\n",
+    "            value:指定的存储数据\n",
+    "        \"\"\"\n",
+    "        # 如果链表是空的，则什么都不做\n",
+    "        if self.__head is None:\n",
+    "            return\n",
+    "\n",
+    "        # 如果链表的头Node节点就是指定删除的Node节点\n",
+    "        pro = self.__head\n",
+    "        if self.__head.data == value:\n",
+    "            self.__head = pro.next_node\n",
+    "            \n",
+    "        not_found=False\n",
+    "        while pro.next_node.data != value:\n",
+    "            if pro.next_node is None:\n",
+    "                not_found = True\n",
+    "                break\n",
+    "            else:\n",
+    "                pro = pro.next_node\n",
+    "            \n",
+    "        if not not_found:\n",
+    "            pro.next_node=pro.next_node.next_node\n",
+    "\n",
+    "    def delete_last_n_node(self, n):\n",
+    "        \"\"\"删除链表中倒数第N个节点.\n",
+    "        主体思路：\n",
+    "            设置快、慢两个指针，快指针先行，慢指针不动；当快指针跨了N步以后，快、慢指针同时往链表尾部移动，\n",
+    "            当快指针到达链表尾部的时候，慢指针所指向的就是链表的倒数第N个节点\n",
+    "        参数:\n",
+    "            n:需要删除的倒数第N个序数\n",
+    "        \"\"\"\n",
+    "        index=0\n",
+    "        current=self.__head\n",
+    "        while current is not None:\n",
+    "            current=current.next_node\n",
+    "            index+=1\n",
+    "        \n",
+    "        if index == 0:\n",
+    "            return\n",
+    "        elif index+1 < n:\n",
+    "            raise Exception('n 大于链表长度')\n",
+    "        elif n==index+1:\n",
+    "        # 删除头节点\n",
+    "            head=self.__head.next_node\n",
+    "            self.__head=None\n",
+    "            self.__head=head\n",
+    "            return\n",
+    "\n",
+    "        fast=self.__head\n",
+    "        slow=self.__head\n",
+    "\n",
+    "        for _ in range(n):\n",
+    "            fast=fast.next_node\n",
+    "        \n",
+    "        while fast.next_node:\n",
+    "            slow=slow.next_node\n",
+    "            fast=fast.next_node\n",
+    "\n",
+    "        # 删除该节点\n",
+    "        if not fast.next_node:\n",
+    "            slow.next_node=None\n",
+    "        else:\n",
+    "            slow.next_node=slow.next_node.next_node\n",
+    "            \n",
+    "        return\n",
+    "        \n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "       \n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
