--- a/04ds/02linked_list.ipynb
+++ b/04ds/02linked_list.ipynb
@@ -224,11 +224,17 @@
     "            slow.next_node=None\n",
     "        else:\n",
     "            slow.next_node=slow.next_node.next_node\n",
-    "            \n",
+    "\n",
     "        return\n",
     "        \n",
-    "\n",
-    "\n",
+    "    def find_mid_node(self):\n",
+    "        \"\"\"查找链表中的中间节点.\n",
+    "        主体思想:\n",
+    "            设置快、慢两种指针，快指针每次跨两步，慢指针每次跨一步，则当快指针到达链表尾部的时候，慢指针指向链表的中间节点\n",
+    "        返回:\n",
+    "            node:链表的中间节点\n",
+    "        \"\"\"\n",
+    "    \n",
     "        \n",
     "\n",
     "            \n",
