--- a/00Pratice/02advanced/04iteror_generator.ipynb
+++ b/00Pratice/02advanced/04iteror_generator.ipynb
@@ -361,6 +361,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "使用send()唤醒，除了可以用next()函数唤醒，让生成器继续执行外，还可以使用send()函数来唤醒执行。<br>\n",
+    "使用send()函数的一个好处是：可以在唤醒的同时向断点传入一个附加数据。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--1--\n",
+      "100\n",
+      "--2--- num= None\n",
+      "--1--\n",
+      "100\n",
+      "--2--- num= None\n",
+      "--1--\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gennerator_test():\n",
+    "    while True:\n",
+    "        print(\"--1--\")\n",
+    "        num = yield 100\n",
+    "        print('--2---', 'num=', num)\n",
+    "\n",
+    "\n",
+    "g = gennerator_test()\n",
+    "print(next(g))\n",
+    "print(next(g))\n",
+    "print(next(g))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--1--\n",
+      "100\n",
+      "--2--- num= 11\n",
+      "--1--\n",
+      "100\n",
+      "--2--- num= 22\n",
+      "--1--\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gennerator_test():\n",
+    "    while True:\n",
+    "        print(\"--1--\")\n",
+    "        num = yield 100\n",
+    "        print('--2---', 'num=', num)\n",
+    "\n",
+    "\n",
+    "g = gennerator_test()\n",
+    "print(next(g))\n",
+    "print(g.send(11))\n",
+    "print(g.send(22))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "![这是图片](../../image/00/generator.png \"generator\")"
    ]
