--- a/00Pratice/02advanced/06concurrency_futures.ipynb
+++ b/00Pratice/02advanced/06concurrency_futures.ipynb
@@ -9,10 +9,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.13 ('study')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
