--- a/00Pratice/01Basci/10regex.ipynb
+++ b/00Pratice/01Basci/10regex.ipynb
@@ -8,7 +8,81 @@
     "\n",
     "来源：许多程序设计语言都支持利用正则表达式进行字符串操作。例如，在Perl中就内建了一个功能强大的正则表达式引擎。正则表达式这个概念最初是由Unix中的工具软件（例如**sed和grep**）普及开来的，后来在广泛运用于Scala 、PHP、C# 、Java、C++ 、Objective-c、Perl 、Swift、VBScript 、Javascript、Ruby 以及Python等等。正则表达式通常缩写成“regex”，单数有regexp、regex，复数有regexps、regexes、regexen。\n",
     "\n",
-    "练习网站：https://regexlearn.com/zh-cn/learn/regex101"
+    "练习网站：https://regexlearn.com/zh-cn/learn/regex101<br/>\n",
+    "python：https://www.liaoxuefeng.com/wiki/1016959663602400/1017639890281664"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 一、因为正则表达式也是用字符串表示的，所以，我们要首先了解如何用字符来描述字符。\n",
+    "\n",
+    "在正则表达式中，如果直接给出字符，就是精确匹配。\n",
+    "1.  用\\d可以匹配一个数字，\\w可以匹配一个字母或数字\n",
+    "- '00\\d'可以匹配'007'，但无法匹配'00A'；\n",
+    "- '\\d\\d\\d'可以匹配'010'；\n",
+    "- '\\w\\w\\d'可以匹配'py3'；\n",
+    "\n",
+    "2.  .可以匹配任意字符\n",
+    "- 'py.'可以匹配'pyc'、'pyo'、'py!'等等。\n",
+    "\n",
+    "3.  用*表示任意个字符（包括0个），用+表示至少一个字符，用?表示0个或1个字符，用{n}表示n个字符，用{n,m}表示n-m个字符.\n",
+    "- \\d{3}\\s+\\d{3,8}\n",
+    "\n",
+    "- \\d{3}表示匹配3个数字，例如'010'；\n",
+    "- \\s可以匹配一个空格（也包括Tab等空白符），所以\\s+表示至少有一个空格，例如匹配' '，' '等；\n",
+    "- \\d{3,8}表示3-8个数字，例如'1234567'。\n",
+    "\n",
+    "4. 综合起来，上面的正则表达式可以匹配以任意个空格隔开的带区号的电话号码。\n",
+    "如果要匹配'010-12345'这样的号码呢？由于'-'是特殊字符，在正则表达式中，要用'\\'转义，所以，上面的正则是\\d{3}\\-\\d{3,8}。\n",
+    "但是，仍然无法匹配'010 - 12345'，因为带有空格。所以我们需要更复杂的匹配方式。\n",
+    "\n",
+    "\n",
+    "# 二、进阶\n",
+    "1.要做更精确地匹配，可以用[]表示范围，比如：\n",
+    "- [0-9a-zA-Z\\_]可以匹配一个数字、字母或者下划线；\n",
+    "- [0-9a-zA-Z\\_]+可以匹配至少由一个数字、字母或者下划线组成的字符串，比如'a100'，'0_Z'，'Py3000'等等；\n",
+    "- [a-zA-Z\\_][0-9a-zA-Z\\_]*可以匹配由字母或下划线开头，后接任意个由一个数字、字母或者下划线组成的字符串，也就是Python合法的变量；\n",
+    "- [a-zA-Z\\_][0-9a-zA-Z\\_]{0, 19}更精确地限制了变量的长度是1-20个字符（前面1个字符+后面最多19个字符）。\n",
+    "\n",
+    "2. A|B可以匹配A或B，所以(P|p)ython可以匹配'Python'或者'python'。\n",
+    "\n",
+    "3. ^表示行的开头，^\\d表示必须以数字开头。\n",
+    "\n",
+    "4. $表示行的结束，\\d$表示必须以数字结束。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# re 模块"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 9), match='010-12345'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# 强烈建议使用Python的r前缀，就不用考虑转义的问题了：\n",
+    "import re\n",
+    "\n",
+    "re.match(r'^\\d{3}\\-\\d{3,8}$', '010-12345')"
    ]
   },
   {
@@ -16,7 +90,347 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# match()方法判断是否匹配，如果匹配成功，返回一个Match对象，否则返回None。常见的判断方法就是：\n",
+    "test = '用户输入的字符串'\n",
+    "if re.match(r'正则表达式', test):\n",
+    "    print('ok')\n",
+    "else:\n",
+    "    print('failed')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 切分字符串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', '', '', 'c']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 用正则表达式切分字符串比用固定的字符更灵活，请看正常的切分代码：\n",
+    "'a b   c'.split(' ')\n",
+    "\n",
+    "# 嗯，无法识别连续的空格，用正则表达式试试："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.split(r'\\s+','a b   c')\n",
+    "# 无论多少个空格都可以正常分割。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 加入,试试:\n",
+    "re.split(r'[\\s\\,]+','a, b,  c  d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 再加入;试试：\n",
+    "re.split(r'[\\s\\,\\;]+', 'a,b;; c  d')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 分组"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010-12345\n",
+      "010\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 除了简单地判断是否匹配之外，正则表达式还有提取子串的强大功能。用()表示的就是要提取的分组（Group）。比如：\n",
+    "m = re.match(r'^(\\d{3})-(\\d{3,8})$', '010-12345')\n",
+    "print(m.group(0))\n",
+    "print(m.group(1))\n",
+    "print(m.group(2))\n",
+    "#如果正则表达式中定义了组，就可以在Match对象上用group()方法提取出子串来。\n",
+    "# 注意到group(0)永远是与整个正则表达式相匹配的字符串，group(1)、group(2)……表示第1、2、……个子串。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('19', '05', '30')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = '19:05:30'\n",
+    "m = re.match(r'^(0[0-9]|1[0-9]|2[0-3]|[0-9])\\:(0[0-9]|1[0-9]|2[0-9]|3[0-9]|4[0-9]|5[0-9]|[0-9])\\:(0[0-9]|1[0-9]|2[0-9]|3[0-9]|4[0-9]|5[0-9]|[0-9])$', t)\n",
+    "m.groups()\n",
+    "# 这个正则表达式可以直接识别合法的时间。但是有些时候，用正则表达式也无法做到完全验证，比如识别日期：\n",
+    "# '^(0[1-9]|1[0-2]|[0-9])-(0[1-9]|1[0-9]|2[0-9]|3[0-1]|[0-9])$'\n",
+    "# 对于'2-30'，'4-31'这样的非法日期，用正则还是识别不了，或者说写出来非常困难，这时就需要程序配合识别了。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 贪婪匹配"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('102300', '')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 最后需要特别指出的是，正则匹配默认是贪婪匹配，也就是匹配尽可能多的字符。举例如下，匹配出数字后面的0：\n",
+    "re.match(r'^(\\d+)(0*)$', '102300').groups()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1023', '00')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 由于\\d+采用贪婪匹配，直接把后面的0全部匹配了，结果0*只能匹配空字符串了。\n",
+    "\n",
+    "# 必须让\\d+采用非贪婪匹配（也就是尽可能少匹配），才能把后面的0匹配出来，加个?就可以让\\d+采用非贪婪匹配：\n",
+    "\n",
+    "re.match(r'^(\\d+?)(0*)$', '102300').groups()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 编译\n",
+    "当我们在Python中使用正则表达式时，re模块内部会干两件事情：\n",
+    "\n",
+    "1.编译正则表达式，如果正则表达式的字符串本身不合法，会报错；\n",
+    "\n",
+    "2.用编译后的正则表达式去匹配字符串。\n",
+    "\n",
+    "如果一个正则表达式要重复使用几千次，出于效率的考虑，我们可以预编译该正则表达式，接下来重复使用时就不需要编译这个步骤了，直接匹配："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('010', '12345')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "# 编译\n",
+    "re_telephone=re.compile(r'^(\\d{3})-(\\d{3,8})$')\n",
+    "# 使用\n",
+    "# 编译后生成Regular Expression对象，由于该对象自己包含了正则表达式，所以调用对应的方法时不用给出正则字符串。\n",
+    "re_telephone.match('010-12345').groups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('010', '8086')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re_telephone.match('010-8086').groups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 练习： 请尝试写一个验证Email地址的正则表达式。版本一应该可以验证出类似的Email：\n",
+    "# someone@gmail.com\n",
+    "# bill.gates@microsoft.com\n",
+    "import re \n",
+    "\n",
+    "def is_vaild_email(addr):\n",
+    "    # 编译邮箱的正则表达式\n",
+    "    re_email=re.compile(r'^[a-zA-Z0-9]+[\\.]*[a-zA-Z0-9]+@[a-zA-Z0-9]+.com$')\n",
+    "    if re_email.match(addr):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "print(is_vaild_email('someone@gmail.com'))\n",
+    "print(is_vaild_email('bill.gates@microsoft.com'))\n",
+    "\n",
+    "print(is_vaild_email('bob#example.com'))\n",
+    "print(is_vaild_email('mr-bob@example.com'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tom Paris\n",
+      "tom\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 版本二可以提取出带名字的Email地址：\n",
+    "# <Tom Paris> tom@voyager.org => Tom Paris\n",
+    "# bob@example.com => bob\n",
+    "import re \n",
+    "\n",
+    "def name_of_email(addr):\n",
+    "    # 编译邮箱的正则表达式\n",
+    "    re_email=re.compile(r'^<([a-zA-Z]+\\s*[a-zA-Z]+)>|([a-zA-Z]+)')\n",
+    "    result=re_email.match(addr)\n",
+    "    if result:\n",
+    "        for item in result.groups():\n",
+    "            if item:\n",
+    "                return item\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "print(name_of_email('<Tom Paris> tom@voyager.org'))\n",
+    "print(name_of_email('tom@voyager.org'))\n"
+   ]
   }
  ],
  "metadata": {
@@ -26,13 +440,21 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "49fdd20b2b68a4dd8ebcbb061b9c04f8e52f6472af90d6159269a7c8abf5d944"
+    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
    }
   }
  },
