--- a/00Pratice/01Basci/10regex.ipynb
+++ b/00Pratice/01Basci/10regex.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "来源：许多程序设计语言都支持利用正则表达式进行字符串操作。例如，在Perl中就内建了一个功能强大的正则表达式引擎。正则表达式这个概念最初是由Unix中的工具软件（例如**sed和grep**）普及开来的，后来在广泛运用于Scala 、PHP、C# 、Java、C++ 、Objective-c、Perl 、Swift、VBScript 、Javascript、Ruby 以及Python等等。正则表达式通常缩写成“regex”，单数有regexp、regex，复数有regexps、regexes、regexen。\n",
     "\n",
-    "练习网站：https://regexlearn.com/zh-cn/learn/regex101<br/>\n",
+    "练习网站：https://regexlearn.com/zh-cn/learn<br/>\n",
     "python：https://www.liaoxuefeng.com/wiki/1016959663602400/1017639890281664"
    ]
   },
@@ -431,6 +431,59 @@
     "print(name_of_email('<Tom Paris> tom@voyager.org'))\n",
     "print(name_of_email('tom@voyager.org'))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 零宽断言\n",
+    "- 如果我们希望正在写的词语出现在另一个词语之前或之后，我们需要使用「零宽断言」。\n",
+    "\n",
+    "## 正向先行断言: (?=)\n",
+    "例如，我们要匹配文本中的小时值。为了只匹配后面有 PM 的数值，<br/>\n",
+    "我们需要在表达式后面使用正向先行断言 (?=)，并在括号内的 = 后面添加 PM。<br/>\n",
+    "Date: 4 Aug 3PM\n",
+    "\n",
+    "\\d+(?=PM)\n",
+    "\n",
+    "## 负向先行断言: (?!)\n",
+    "例如，我们要在文本中匹配除小时值以外的数字。<br/>\n",
+    "我们需要在表达式后面使用负向先行断言 (?!)，并在括号内的 ! 后面添加 PM，<br/>\n",
+    "从而只匹配没有 PM 的数值。<br/>\n",
+    "Date: 4 Aug 3PM\n",
+    "\n",
+    "\\d+(?!PM)\n",
+    "\n",
+    "## 正向后行断言: (?<=)\n",
+    "例如，我们要匹配文本中的金额数。为了只匹配前面带有 $ 的数字。<br/>\n",
+    "我们要在表达式前面使用正向后行断言 (?<=)，并在括号内的 = 后面添加 \\$。<br/>\n",
+    "Product Code: 1064 Price: $5\n",
+    "\n",
+    "(?<=\\$)\\d+\n",
+    "\n",
+    "## 负向后行断言: (?<!)\n",
+    "例如，我们要在文本中匹配除价格外的数字。为了只匹配前面没有 $ 的数字，<br/>\n",
+    "我们要在表达式前用负向后行断言 (?<!)，并在括号内的 ! 后面添加 \\$。<br/>\n",
+    "Product Code: 1064 Price: $5\n",
+    "\n",
+    "(?<!\\$)\\d+\n",
+    "\n",
+    "# 匹配模式\n",
+    "## 贪婪匹配\n",
+    "正则表达式默认执行贪婪匹配。这意味着匹配内容会尽可能长。<br/>\n",
+    "请看下面的示例，它匹配任何以 r 结尾的字符串，以及前面带有该字符串的文本，但它不会在第一个 r 处停止匹配。<br/>\n",
+    "ber beer beeer beeeer\n",
+    "\n",
+    ".*r\n",
+    "\n",
+    "## 懒惰匹配\n",
+    "与贪婪匹配不同，懒惰匹配在第一次匹配时停止。<br/>\n",
+    "下面的例子中，在 * 之后添加 ?，<br/>\n",
+    "将查找以 r 结尾且前面带有任意字符的第一个匹配项。这意味着本次匹配将会在第一个字母 r 处停止。<br/>\n",
+    "ber beer beeer beeeer\n",
+    "\n",
+    ".*?r\n"
+   ]
   }
  ],
  "metadata": {
@@ -454,7 +507,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
+    "hash": "49fdd20b2b68a4dd8ebcbb061b9c04f8e52f6472af90d6159269a7c8abf5d944"
    }
   }
  },
